@@ -1,5 +1,10 @@
 2004-08-25  Philippe Gerum  <rpm@xenomai.org>
 
+	* arch/ppc/hal/hal.c (rthal_calibration_timer): On PowerPC
+	systems, the cost of setting the decrementer or the PIT does not
+	induce significant latency; so just return zero from there without
+	further evaluation.
+
 	* arch/ppc/hal/switch.S (rthal_context_switch): Fix register
 	offset mismatch.
 
